--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(MaxText)
+project(MaxText LANGUAGES "CXX")
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_LINKER_TYPE "CXX")
 
 add_subdirectory(TextEngine)
 
 # Define a library target
-add_library(MaxText STATIC TextEngine/test.hpp)
+add_library(MaxText INTERFACE TextEngine/test.hpp)
 
 install(TARGETS MaxText
     EXPORT MaxTextTargets
@@ -18,4 +22,5 @@ export(
 EXPORT MaxTextTargets
 FILE "${CMAKE_CURRENT_BINARY_DIR}/MaxTextTargets.cmake"
 NAMESPACE MaxText::
+
 )
