--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ add_subdirectory(TextEngine)
 
 # Define a library target
 add_library(MaxText INTERFACE TextEngine/test.hpp)
+target_include_directories(MaxText INTERFACE
+$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/TextEngine>
+$<INSTALL_INTERFACE:/TextEngine> # relative to install prefix
+)
 
 install(TARGETS MaxText
     EXPORT MaxTextTargets
