--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,27 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(MaxText LANGUAGES "CXX")
+project(MaxText)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_LINKER_TYPE "CXX")
+
+include(FetchContent)
+
+FetchContent_Declare(
+	glm
+	GIT_REPOSITORY	https://github.com/g-truc/glm.git
+	GIT_TAG 	bf71a834948186f4097caa076cd2663c69a10e1e #refs/tags/1.0.1
+)
+
+FetchContent_MakeAvailable(glm)
+
+FetchContent_Declare(
+	CookbookWrapperLib
+	GIT_REPOSITORY https://github.com/MaxiM863/Cookbook.git
+    GIT_TAG main
+)
+
+FetchContent_MakeAvailable(CookbookWrapperLib)
 
 add_subdirectory(TextEngine)
 
