--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ FetchContent_MakeAvailable(CookbookWrapperLib)
 add_subdirectory(TextEngine)
 
 # Define a library target
-add_library(MaxText INTERFACE TextEngine/test.hpp)
-target_include_directories(MaxText INTERFACE
+add_library(MaxText STATIC TextEngine/LettersObj.cpp)
+target_include_directories(MaxText PUBLIC
 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/TextEngine>
 $<INSTALL_INTERFACE:/TextEngine> # relative to install prefix
 )
